rust/examples/errors/out-of-bounds-array/src/main.rs
fn main() {
    let v = ["apple", "banana", "peach"];
    println!("{}", v[0]);
    println!("{}", v[5]);
}
